K8S/form-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formservice
  template:
    metadata:
      labels:
        app: formservice
    spec:
      containers:
        - name: formservice
          image: mzdevi/formservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: form-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: formservice
  ports:
  - name: formservice
    protocol: TCP
    port: 80
    targetPort: 80
