K8S/form-pgsql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-pgsql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form-postgres
  template:
    metadata:
      labels:
        app: form-postgres
    spec:
      containers:
        - name: form-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgsqldb
      volumes:
      - name: pgsqldb
        persistentVolumeClaim:
          claimName: form-pgsql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-form-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: form-postgres
  ports:
  - name: form-postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: form-postgres-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: form-postgres
  ports:
  - protocol: TCP
    port: 5434
    targetPort: 5432
