K8S/workspace-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspaceservice
  template:
    metadata:
      labels:
        app: workspaceservice
    spec:
      containers:
      - name: workspaceservice
        image: mzdevi/workspaceservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: workspaceservice 
  ports:
  - name: workspaceservice
    protocol: TCP
    port: 80
    targetPort: 80
