K8S/workspace-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspaceservice-srv
spec:
  type: NodePort
  selector:
    app: workspaceservice
  ports:
  - name: workspaceservice
    protocol: TCP
    port: 80
    targetPort: 80
