K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/workspace
            pathType: Prefix
            backend:
              service:
                name: workspace-clusterip-srv
                port:
                  number: 80
          - path: /api/form
            pathType: Prefix
            backend:
              service:
                name: form-clusterip-srv
                port:
                  number: 80
